# SimVCCE

./: Flask_Web.md  Flask_Webr.md  LICENSE  PlantUML._VSCode.md  PlantUML_Class.md  PlantUML_Flowchart.md  README.md
doc/: ClassDiagram_VCCE.md  Dot_Class_VCCE.md  PlantUML._VSCode.md  PlantUML_Class.md  PlantUML_Class_VCCE.md  PlantUML_Flowchart.md  TheUMLDiagram.md
playground/: README.md  demo_cascade.py  demo_combined_condenser_insulated_ductt.py  demo_hp48_combined_comdenser_insulated_duct.py  demo_hp48_split_insulated_duct.py  demo_insulated_duct.py  demo_singel_vcc.py  demo_two_stage.py  demo_var.py  demo_vccapp_json_var.py
playground/jsonmodel/: ivcr_var.json  ivcrvar.json  vchp_ohio_411.json  vchp_ohio_48.json  vchp_ohio_48_combined.json  (+10 more)
pypi/: README.md  setup.py
uml/: ClassDiagram_VCCE.md  PlantUML._VSCode.md  PlantUML_Class_VCCE.md  PlantUML_Flowchart.md  README.md  packages.dot
vcccpp/: CMakeLists.txt  README.md  demovcc.cpp  makefile  makelib.mk
vcccpp/include/: CoolPropLib.h  common.hpp  compressor.hpp  condenser.hpp  connector.hpp  evaporator.hpp  expansionvalve.hpp  node.hpp  vcc.hpp  vccycle.hpp
vcccpp/src/: common.hpp  compressor.cpp  compressor.hpp  condenser.cpp  condenser.hpp  connector.cpp  evaporator.cpp  evaporator.hpp  expansionvalve.cpp  expansionvalve.hpp  node.cpp  port.cpp  port.hpp  vcc.cpp  vcc.hpp  vccycle.cpp
vccmo/: VCRCycle.mo
vccpy/: vccapp.py  vccapp_json.py
vccpython/: README.md  app.py  vccapp.py  vccapp_json.py  vccapp_json_one.py  vccapp_json_one_var.py
webservice/: README.md  WebService.md  app.py  client.py
(+149 files in other folders)
